--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <script src="./main.js" defer></script>
-    <title>Pop Cat</title>
+    <title>Pop Taiwan</title>
+        <meta content="PopTaiwan" property="og:title" />
+    <meta content="快來玩PopTaiwan" property="og:description" />
+    <meta content="https://taiwanblink.tk" property="og:url" />
+    <meta content="https://taiwanblink.tk/images/close.png" property="og:image" />
+    <meta content="#0f03fc" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
     <div class="wrapper">
