--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <meta content="https://taiwanblink.tk" property="og:url" />
     <meta content="https://taiwanblink.tk/images/close.png" property="og:image" />
     <meta content="#0f03fc" data-react-helmet="true" name="theme-color" />
+    <style>
+        h1 {text-align: center;}
+    </style>
 </head>
 <body>
     <center><h1>PopTaiwan</h1></center>
