--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </style>
 </head>
 <body>
-    <center><h1>PopTaiwan</h1></center>
+    <h1>PopTaiwan</h1>
     <div class="wrapper">
         <img id="popcat" src="./images/close.png" alt="">
         <button id="btn">眨眼</button>
