--- a/index.html
+++ b/index.html
@@ -12,12 +12,10 @@
     <meta content="https://taiwanblink.tk" property="og:url" />
     <meta content="https://taiwanblink.tk/images/close.png" property="og:image" />
     <meta content="#0f03fc" data-react-helmet="true" name="theme-color" />
-    <style>
-        h1 {text-align: center;}
-    </style>
+
 </head>
 <body>
-    <h1>PopTaiwan</h1>
+   <font face = "Verdana" size = "+4">PopTaiwan</font> 
     <div class="wrapper">
         <img id="popcat" src="./images/close.png" alt="">
         <button id="btn">眨眼</button>
