--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </head>
 <body>
-   <font face = "Verdana" size = "+4">PopTaiwan</font> 
+   <font color = "#FFFFFF" face = "Verdana" size = "+4">PopTaiwan</font> 
     <div class="wrapper">
         <img id="popcat" src="./images/close.png" alt="">
         <button id="btn">眨眼</button>
