--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <meta content="https://taiwanblink.tk" property="og:url" />
     <meta content="https://taiwanblink.tk/images/close.png" property="og:image" />
     <meta content="#0f03fc" data-react-helmet="true" name="theme-color" />
+    <link rel="shortcut icon" href="/favicon.ico"/>
 
+<link rel="bookmark" href="/favicon.ico"/>
 </head>
 <body>
    <font color = "#FFFFFF" face = "Verdana" size = "+4">PopTaiwan</font> 
