--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="bookmark" href="/favicon.ico"/>
 </head>
 <body>
-   <font color = "#FFFFFF" face = "Verdana" size = "+4">PopTaiwan</font> 
+    <div class="wrapper"><font color = "#FFFFFF" face = "Verdana" size = "+4">PopTaiwan</font></div>
     
     
     <div class="wrapper">
