--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
     <link rel="bookmark" href="/favicon.ico"/>
 </head>
 <body>
-    <div class="wrapper"><font color = "#FFFFFF" face = "Verdana" size = "+4">PopTaiwan</font></div>
-    
-    
     <div class="wrapper">
+        <font color = "#FFFFFF" face = "Verdana" size = "+4">PopTaiwan</font>
         <img id="popcat" src="./images/close.png" alt="">
         <button id="btn">眨眼</button>
     </div>
