--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="wrapper">
         <font color = "#FFFFFF" face = "Verdana" size = "+4">PopTaiwan</font>
         <img id="popcat" src="./images/close.png" alt="">
-        <button id="btn">眨眼</button>
+        <button id="btn">Pop</button>
     </div>
 <script type="module">
   // Import the functions you need from the SDKs you need
