--- a/index.html
+++ b/index.html
@@ -40,5 +40,9 @@
   // Initialize Firebase
   const app = initializeApp(firebaseConfig);
 </script>
+<footer>
+    網站瀏覽次數: <a href='https://www.symptoma.cn/zh/info/covid-19#info'>SARS-CoV-2</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=41c46d8ade4e3e067b8fd3d21bcd0f4648fc878c'></script>
+<script type="text/javascript" src="https://freevisitorcounters.com/en/home/counter/861339/t/3"></script>
+    網站由台灣球TaiwanBall#1051製作
 </body>
 </html>
