--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   const app = initializeApp(firebaseConfig);
 </script>
 <footer>
-    網站瀏覽次數: <a href='https://www.symptoma.cn/zh/info/covid-19#info'>SARS-CoV-2</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=41c46d8ade4e3e067b8fd3d21bcd0f4648fc878c'></script>
-<script type="text/javascript" src="https://freevisitorcounters.com/en/home/counter/861339/t/3"></script>
-    網站由台灣球TaiwanBall#1051製作
+     <div class="footer">
+            <div class="container">
+                <p class="footer-text">網站是由Coding Star製作，由台灣球TaiwanBall#1051編輯</p>
 </body>
 </html>
